--- a/_posts/2015-11-05-mess.md
+++ b/_posts/2015-11-05-mess.md
@@ -22,3 +22,14 @@ updated: 2015-11-05  16:21
     + [goparsec](https://github.com/Dwarfartisan/goParsec)
     + [gisp](https://github.com/Dwarfartisan/gisp) 一个lisp的解释器
 
+### Quick Jump Dir
+
+When use `cd` to change directory frequently, I feel it really waste time, even
+with the `tab` to complete. And the command `popd/pushd`  provied by Linux are
+not efficient. So here is a tool to solve my problem.
+
++ bashmarks [https://github.com/huyng/bashmarks](https://github.com/huyng/bashmarks)
++ z [https://github.com/rupa/z](https://github.com/rupa/z)
+
+I chose the `bashmarks`, very efficient!
+
