fix some format error

--- a/_posts/2015-11-05-mess.md
+++ b/_posts/2015-11-05-mess.md
@@ -24,9 +24,7 @@ updated: 2015-11-05  16:21
 
 ### Quick Jump Dir
 
-When use `cd` to change directory frequently, I feel it really waste time, even
-with the `tab` to complete. And the command `popd/pushd`  provied by Linux are
-not efficient. So here is a tool to solve my problem.
+ When use `cd` to change directory frequently, I feel it really waste time, even with the `tab` to complete. And the commands `popd/pushd`  provied by Linux are not efficient. So here is a tool to solve my problem.
 
 + bashmarks [https://github.com/huyng/bashmarks](https://github.com/huyng/bashmarks)
 + z [https://github.com/rupa/z](https://github.com/rupa/z)
