fix some format error

--- a/_posts/2015-11-06-go.md
+++ b/_posts/2015-11-06-go.md
@@ -4,8 +4,8 @@ updated: 2015-11-06  16:21
 ---
 
 ## GO
----
-### empty interface{}
+
+### Empty interface{}
 
 + This type is a interface that has no methods
 + All types satisfy the empty interface. That means that if you write a function that taks an *inteface{}* as an parameter, So that you can supply that function with any value
@@ -18,7 +18,7 @@ Confuse: which type variable can be passed into function.
 
 If `interface{}` can be any type, so which type of `v` in function `Something`? It still is the type `interface{}`. Because go have take a type convert. So v's static type still is `interface{}`
 
-### implementation of interfaces
+### Implementation of interfaces
 
 An interface value is constructed of two words of data;
 
@@ -35,16 +35,14 @@ An interface value is constructed of two words of data;
 
 So with that we can pass it to function which hava the parameter  `[]interfac{}`
 
-
-
-### go lex
+### Go lex
 [lex.go source code](https://golang.org/src/text/template/parse/lex.go)
 
 
 ## Links
----
-[Go interface implementation](http://research.swtch.com/interfaces)
-[Go frequently A&Q](https://golang.org/doc/faq)
-[Full introducntion of interface with example](http://go-book.appspot.com/interfaces.html)
+
++ [Go interface implementation](http://research.swtch.com/interfaces)
++ [Go frequently A&Q](https://golang.org/doc/faq)
++ [Full introducntion of interface with example](http://go-book.appspot.com/interfaces.html)
 
 > c'est la vie, not everything is perfect.
