--- a/_posts/2015-11-07-awk-parse.md
+++ b/_posts/2015-11-07-awk-parse.md
@@ -3,6 +3,7 @@ title: Awk String Function
 updated: 2015-11-07  16:21
 ---
 
+## Awk Part
 
 ### match & substr
 
@@ -18,7 +19,7 @@ There are two built-in variables: `RLENGTH` & `RSTART`
 
 + substr
 
-	substr(s,p)  return the suffix of s starting at position p
+	substr(s,p)   return the suffix of s starting at position p
 	substr(s,p,n) return substring of s of length n starting at position p
 
 With these two function,we can parse a line. 
@@ -31,8 +32,52 @@ With these two function,we can parse a line.
 we can add some regex expressions to match() and that can parse a line. 
 A simple demo at my [gist code](https://gist.github.com/JesseEisen/4fef2bf5524cc3c85e7e)
 
+### Others 
+
++ sub
+	
+	sub(r,s)  e.g sub(/test/,"mytest") make all line contain *test* become *mytest* 
+	sub(r,s,t) e.g sub(/test/,"mytest",$1) if $1 have substring *test*, substitute it.
+
++ gsub
+
+	gsub(r,s)  e.g like sub, substitute all 
+	gsub(r,s,t)  the same
+
+this function will substitute all parttern included in traget or $0.
+
+## Go Part
+
+### errors 
+
+We use error by the following two ways:
+
+**1.first way**
+Improt the `errors` package, and we can use the `error.New` to given an error information like: 
+
+	errstring := errors.New("here is the reason")  or 
+	errstring := fmt.Errorf("error value is %d\n",errcode)
+
+**2.second way**
+we can use the interface `error` like:
+	
+	type Myerror struct{
+		why string
+	}
+
+	func (e Myerror) Error() string {
+		return fmt.Sprintf("%v",e.why)
+	}
+
+	func something() (int, err error){
+		....
+		err = Myerror{"..."}
+		...
+	}
 
 
 
+## Links
 
++ [built-in variable](http://www.chemie.fu-berlin.de/chemnet/use/info/gawk/gawk_11.html)
 
