--- a/_posts/2015-11-09-mess1.md
+++ b/_posts/2015-11-09-mess1.md
@@ -29,3 +29,46 @@ updated: 2015-11-09  22:21
     diff -ruN file1 file2 > patch.log
     patch file2 pathc.log  //patch file2 with patch.log
 
+
+## Go Method 
+
+### Format
+
+when we define a type, this type can has a method. We just define a `func` with a force type first,like:
+
+	type A struct{
+		age int
+	}
+
+	func (a *A)Add(){
+		a.age += 1
+	}
+
+So we have defined a method `Add` of struct `A`, and we can use following way to use this method.
+
+	a := A{age:1}
+	a.Add()  //now a.age becomes 2
+
+### Any type 
+
+Any type can has method. so we can use `type` keyword to decaler a new type, like:
+
+	type TZ int
+
+	func (tz *TZ)Add(num int){
+		*tz += TZ(num)
+	}
+
+	func main(){
+		var t TZ
+
+		t.Add(10)  //now t = 10
+		(*TZ).Add(&t,10)  //now t = 20
+	}
+
+
+We just implement two different way to use method, first way is called `method value` and the second way is called `method expression`. Both of them is correct. 
+
+Notice: Even is `TZ` is a alias of `int`, we still need to convert `int` into `TZ` in the method. 
+
+ 
