--- a/_posts/2015-11-10-C-link.md
+++ b/_posts/2015-11-10-C-link.md
@@ -74,5 +74,10 @@ Not only the debug info, but also the comment and some useless info, we can use 
 
 
 
+## Link
 
++ [ELF introduction](http://flint.cs.yale.edu/cs422/doc/ELF_Format.pdf)
+
+
+> motto: such is life, keep going.
 
