--- a/_posts/2015-11-10-C-link.md
+++ b/_posts/2015-11-10-C-link.md
@@ -9,11 +9,11 @@ There are three types of the elf file: executables file/shared object file/reloc
 
 Following are the some tools to find out what in those ELF file:
 
-1. file
+**1. file**
 
 This tool can show a file some basic information. It use the `magic` file to read that, the output information is like the `readelf -h xxx`.
 
-2. xxd 
+**2. xxd** 
 
 This tool show the `hex address` and the `ascii value` of the file, we can find some value in it. like:
 
@@ -25,19 +25,19 @@ We can get the address and the string's ascii value, and we can modify this valu
 
 How weak the string in those file.
 
-3. strings
+**3. strings**
 
 This is a tools that can read the binary file, show the string in the binary file. 
 
-4. nm 
+**4. nm**
 
 This tool can show the `symbol` in ELF file.  With some flags, like: `T` means the section `.text`, `U` means undefine, and so on. we still can see some functions that invoked in this file.
 
-5. ldd
+**5. ldd**
 
 This tool use to show the `share object` in ELF file, we can use that to debug some `.so` file link error
 
-6. readelf 
+**6. readelf** 
 
 This is a powerful tool, and the other tool named `objdump`, they are similarly. With some options and flags, we can get what we want,like:
 
@@ -58,7 +58,7 @@ With this flag , the `readelf` will show the all the `segment` and `section` whi
 With this flag, the `readelf` will show the `.rodata` section only, so we can conform something.
 
 
-6. gdb 
+**7. gdb** 
 
 When we use the `-g` flag in the gcc, we can input the debug info into the ELF file, so we can use the following order:
 	
