--- a/_posts/2015-11-11-go-color.md
+++ b/_posts/2015-11-11-go-color.md
@@ -70,7 +70,6 @@ We can find the set color code is:
 
 > on a slow boat to china 
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="http://music.163.com/outchain/player?type=0&id=125909811&auto=1&height=90"></iframe>
 
-<embed src="http://music.163.com/style/swf/widget.swf?sid=125909811&type=0&auto=1&width=310&height=90" width="330" height="110"  allowNetworking="all"></embed>
+<embed src="http://music.163.com/style/swf/widget.swf?sid=125909811&type=0&auto=1&width=310&height=90" width="330" height="110"  allowNetworking="all">
 
