fix some errors

--- a/_posts/2015-11-12-mess2.md
+++ b/_posts/2015-11-12-mess2.md
@@ -1,5 +1,5 @@
 ---
-title: Go color
+title: C Debug Error
 updated: 2015-11-12  22:30
 ---
 
@@ -41,5 +41,5 @@ And another way is implement it use `inline` keyword.
 That's all 
 
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="http://music.163.com/outchain/player?type=0&id=125909811&auto=0&height=430">
+<embed src="http://music.163.com/style/swf/widget.swf?sid=125909811&type=0&auto=0&width=310&height=430" width="330" height="450"  allowNetworking="all">
 
