--- a/_posts/2015-11-17-mess3.md
+++ b/_posts/2015-11-17-mess3.md
@@ -30,9 +30,9 @@ another format:
 	fi
 
 
-**2. Loop **
+**2. Loop**
 
-+ for 
+**2.1 for** 
 
 	for var in items
 	do 
@@ -46,14 +46,14 @@ The items can be `array`, `here document` etc..
 		...
 	done
 
-+ while
+**2.2 while**
 
 	while condition
 	do 
 		...
 	done
 
-+ Infinity loop:
+**2.3 Infinity loop**
 
 	while :
 	do 
@@ -62,7 +62,7 @@ The items can be `array`, `here document` etc..
 	----
 	for (( ; ;))
 
-+ until
+**2.4 until**
 
 	until condition
 	do 
@@ -104,7 +104,7 @@ Difference between `[]` and `[[ ]]`
 + [  is shell builtins 
 + [[ is bash keywords
 
-more specification find in:
+more specification refer to following links:
 
 + [stackoverflow question about difference between those two](http://serverfault.com/questions/52034/what-is-the-difference-between-double-and-single-square-brackets-in-bash)
 + [Bash FAQ about this topic](http://mywiki.wooledge.org/BashFAQ/031)
