--- a/_posts/2015-12-30-awk-faq.md
+++ b/_posts/2015-12-30-awk-faq.md
@@ -3,7 +3,7 @@ title: AWK And Shell FAQ
 updated: 2015-12-31  16:21
 ---
 
-## How to make calculation on hexadecimal number in awk?
+## 1.How to make calculation on hexadecimal number in awk?
 
 It is very easy to convert a hexadecimal number to decimal.but if you use the `gawk`
 you need to specify a flag. Here is the example
@@ -20,10 +20,11 @@ if the $2 is `0000000ff`, so the $5 will be `255`.
 ### reference
 
 •[convert-hex-to-dec](http://stackoverflow.com/questions/4614775/converting-hex-to-decimal-in-awk-or-sed)
+
 •[calc-hex-with-awk](http://stackoverflow.com/questions/3683110/how-to-make-calculations-on-hexadecimal-numbers-with-awk)
 
 
-## Embedding awk in shell script
+## 2.Embedding awk in shell script
 
 use the `read` and `Heredocument` to insert the awk script
 
@@ -48,7 +49,9 @@ EOF
 
 awk "$scriptVariable" ${inputfile}
 ```
-## Travel position parameters
+
+
+## 3.Travel position parameters
 
 Only use the `while`, `$#` and `shift` to make that:
 
