--- a/_posts/2016-04-19-shell-faq.md
+++ b/_posts/2016-04-19-shell-faq.md
@@ -5,13 +5,13 @@ updated: 2016-04-19  16:21
 
 ## 1.How to extract the string between two \n in a file
 
-This category questions we can consider use the `awk` to slove. Because it is regularity. we can separate the line by `\n`, and make each part as a record.
+This category questions **we can consider use the `awk` to slove it**. Because it is regularity. we can separate the line by `\n`, and make each part as a record.
 
 ```html
-<span class="WebRupee">Rs.</span>\n29\n<br/><font style="font-size:smaller;font-weight:normal">\n3 days\n</font></td>
+<span class="WebRupee">Rs.</span>\n29\n<br/><font style="font-size:smaller">\n3 days\n</font></td>
 ```
 
-Here we need to parse the `29` `3 days` ect. We can find that the target is surrounded by `\n`. So we can use `awk` tp solve it.
+Here we need to parse the `29`,`3 days` ect. We can find that the target is surrounded by `\n`. So we can use `awk` tp solve it.
 
 ```bash
 awk 'NR%2 == 0' RS='\\\\n' input.txt
@@ -19,7 +19,7 @@ awk 'NR%2 == 0' RS='\\\\n' input.txt
 
 we separate the line into different record by `\n`. and the target is the on the even record. 
 
-**Another Way**   
+### Another Way
 Also we can use the `grep` to solve that.Just match the string between `\n`. so we can do:
 
 ```bash
@@ -29,7 +29,7 @@ $ grep -o '\\n[^\\]*\\n' input.txt
 ```
 So we just need to eliminate the `\n` surrounded. There are two ways to make that.
 
-+ Use the GNU grep
+####  1. Use the GNU grep
 
 If you use the GUN grep, we can use the `-P` which use the `perl like RE`. so the command should be 
 
@@ -38,10 +38,10 @@ grep -oP '(?<=\\n)[^\\<>]*(?=\\n)' input.txt
 ```
 
 `(?<=\\n)` is a look-behind assertion and the `(?=\\n)` is look-ahead assertion.Both of them are the `Lookaround Assertions` in perl.
-You can refer the [http://perldoc.perl.org/perlre.html](http://perldoc.perl.org/perlre.html).
+You can refer the: [http://perldoc.perl.org/perlre.html](http://perldoc.perl.org/perlre.html).
 
 
-+ Use the `sed` to move that
+#### 2. Use the `sed` to move that
 
 ```bash
 grep -o '\\n[^\\]*\\n' input.txt | sed 's/\\n//g'
