--- a/_posts/2016-04-19-shell-faq.md
+++ b/_posts/2016-04-19-shell-faq.md
@@ -19,7 +19,8 @@ awk 'NR%2 == 0' RS='\\\\n' input.txt
 
 we separate the line into different record by `\n`. and the target is the on the even record. 
 
-### Another Way
+**Another Way**  
+
 Also we can use the `grep` to solve that.Just match the string between `\n`. so we can do:
 
 ```bash
@@ -37,7 +38,7 @@ If you use the GUN grep, we can use the `-P` which use the `perl like RE`. so th
 grep -oP '(?<=\\n)[^\\<>]*(?=\\n)' input.txt
 ```
 
-`(?<=\\n)` is a look-behind assertion and the `(?=\\n)` is look-ahead assertion.Both of them are the `Lookaround Assertions` in perl.
+Explain:The `-P` is the make grep to use the `perl`regular expression.`(?<=\\n)` is a look-behind assertion and the `(?=\\n)` is look-ahead assertion.Both of them are the `Lookaround Assertions` in perl.
 You can refer the: [http://perldoc.perl.org/perlre.html](http://perldoc.perl.org/perlre.html).
 
 
