--- a/_posts/2016-04-19-shell-faq.md
+++ b/_posts/2016-04-19-shell-faq.md
@@ -52,5 +52,34 @@ So, It all determined by you to use which way.
 
 
 
+## 2.Using -exec to move file after find 
 
+> find . -type f -exec mv -b --suffix=bak ./backup {} +
+
+If we expand this commad, we will find that:
+
+```bash
+mv -b --suffix=bak ./backup ./file1 ./file2 ...
+```
+
+So that will get wrong, because the `mv` need the last argument must be a `directory`. now is the `file`.
+There are two way to solve it .
+
+```bash
+find . -type f -exec mv -b --suffix=bak {} ./backup \;  
+or
+find . -type f -exec mv -b --suffix=bak -t ./backup {} +  #if you use the gnu mv
+```
+
+More need to pay attention is mv parameters:
+
++ `-b or --backup` 
+The `--backup=[CONTROL]` set the backup type, The backup suffix is '~', unless set with --suffix or SIMPLE_BACKUP_SUFFIX. and the `CONTROL` value can be : `none`, `numbered`, `existing`, `simple`.
+
+And the `-b` is same like `--backup`, but it no receive any argument.
+
++ `--suffix`
+override the usual backup suffix
+
+And the backup will work when the destation directory have the same filename as the file you mv, so `mv` will not override that. 
 
