--- a/_posts/2015-12-30-awk-faq.md
+++ b/_posts/2015-12-30-awk-faq.md
@@ -11,6 +11,9 @@ you need to specify a flag. Here is the example
 ```bash
 awk $([[ $(awk --version) = GNU* ]] && echo --non-decimal-data) -f ...
 $5=sprintf("%d","0x"$2)  
+
+#or 
+$5=strtonum("0x"$2)
 ```
 
 Explain:
@@ -61,4 +64,37 @@ while (( "$#" )); do
 done
 ```
 
+## 4.Getopts To parse command line parameters
+
+First We use an example:
+
+```bash
+while getopts "a:b:c" opts; do
+	case $opts in 
+	  a) 
+	     append=$OPTARG
+		 ;;
+	  b) 
+	     behandl=$OPTARG
+		 ;;
+	 c) 
+	     flag=1
+		 ;;
+	 \?)
+	    usage
+		;;
+   esac
+done
+shift $((OPTIND-1))
+```
+
+That's the normal usage of `getopts`. Here is the explaination of this code:
+
++ OPTIND   
+  Holds the index to the next argument to be processed.Also useful to shift the positional parameters after processing with `getopts`. `OPTIND` is initially set to 1, and **need to be re-set to 1 if you want to parse anything again with getopts.**
+
++ OPTARG   
+  This variable is set to any argument foa an option found by `getopt`. 
+
+And We if the option need an argument, we can add the `:` behind them. Also if you do not want to use the `getopts`. you can use the mannual way to parser that.
 
