--- a/_posts/2016-04-19-shell-faq.md
+++ b/_posts/2016-04-19-shell-faq.md
@@ -83,3 +83,23 @@ override the usual backup suffix
 
 And the backup will work when the destation directory have the same filename as the file you mv, so `mv` will not override that. 
 
+
+## How to delete file with garbled name
+
+we can use the `ls -i` to find the `inode` info of the file. so we can use the `find` command to find it and delete it. like:
+
+```bash
+ls -i
+# 394476 xxx*?er?file
+find . -inum 394476 -exec rm {} +
+```
+
+sometimes we can use the permission number to find them and delete them. like if the file own to the root, so we can use the `find` in this way:
+
+```bash
+find ! -name ".*" -maxdepth 1 -type f -perm 0644 -exec rm {} +
+```
+
+And may get an error like:
+
+> find: warning: you have specified the -maxdepth option after a non-option argument !, but options are not positional (-maxdepth affects tests specified before it as well as those specified after it).  Please specify options before other arguments.
