--- a/_posts/2016-08-16-C-faq.md
+++ b/_posts/2016-08-16-C-faq.md
@@ -13,3 +13,31 @@ if you do not want to enable all the warning flags. You can follow below which r
 
 The reference of this manual online: [Warning Options](https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html)
 
+## What does the __builtin_expect do in C
+
+This is a GNU C builtin function. The function definition is :
+
+```c
+long __builtin_expect(long exp, long c)
+```
+
+The reutnr value is the value of `exp`, which should be an integral expression.The semantics of the built-in are that it is expected that `exp==c`. For example:
+
+```c
+if(__builitin_expect(x,0))
+	foo();
+```
+
+indicates that we do not expect to call `foo`, since we expect x to be zero. Since you are limited to integral expressions for `exp`.
+
+Notice: if the `exp == c` the optimise will get more improve, else the optimise may down.
+
+There are two marcos in linux kernel code:
+
+```c
+#define likely(x)  __builtin_expect(!!(x), 1)
+#define unlikely(x) __builtin_expect(!!(x),0)
+```
+
+Reference: [GCC Builtins Documentation](https://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html)
+
