new shell faq add

--- a/_posts/2016-04-19-shell-faq.md
+++ b/_posts/2016-04-19-shell-faq.md
@@ -84,7 +84,7 @@ override the usual backup suffix
 And the backup will work when the destation directory have the same filename as the file you mv, so `mv` will not override that. 
 
 
-## How to delete file with garbled name
+## 3.How to delete file with garbled name
 
 we can use the `ls -i` to find the `inode` info of the file. so we can use the `find` command to find it and delete it. like:
 
@@ -103,3 +103,19 @@ find ! -name ".*" -maxdepth 1 -type f -perm 0644 -exec rm {} +
 And may get an error like:
 
 > find: warning: you have specified the -maxdepth option after a non-option argument !, but options are not positional (-maxdepth affects tests specified before it as well as those specified after it).  Please specify options before other arguments.
+
+
+## 4.tar multi directories in a directory
+
+If we want to tar all the directories in one dir, we can use the `for` to do that. Do not need `find`.
+
+see:
+
+```bash
+shopt -s nullglob
+for dir in */; do
+	tar -cvf "${dir%/}.tar" -- "$dir"
+done
+```
+The reason why to enabel the `nullglob` is that when there is no dir, the `*/` will expand to `*`. 
+
