add some css code

--- a/_posts/2016-08-08-openpyxl.md
+++ b/_posts/2016-08-08-openpyxl.md
@@ -3,4 +3,27 @@ title: Openpyxl Toturial
 updated: 2016-08-08  16:21
 ---
 
+## 安装
+
+直接使用pip安装
+
+```
+$ pip install openpyxl
+$ pip install pillow   -- if want to enable image
+```
+
+## 使用
+
+### 创建新的文件
+
+```
+from openpyxl import Workbook
+wb = Workbook()
+
+ws = wb.create_sheet("mysheet")
+
+wb.save("filename.xlsx")
+```
+
+创建一个空文件，并保存为`filename.xlsx`。 
 
