--- a/_posts/2016-08-16-C-faq.md
+++ b/_posts/2016-08-16-C-faq.md
@@ -3,7 +3,7 @@ title: C Program FAQ
 updated: 2016-08-16  16:21
 ---
 
-## [compile] How to add and remove Warning flags in gcc
+##### [compile] How to add and remove Warning flags in gcc
 
 This is a RTFM question, but there ara also some great points need to pay attention. First, when we add the `-Wall` flag. That means it **enables all the warnings**. The specify information you can refer the manual.
 
@@ -13,7 +13,7 @@ if you do not want to enable all the warning flags. You can follow below which r
 
 The reference of this manual online: [Warning Options](https://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html)
 
-## [compile] Warning: integer constant is too large for 'long' type
+##### [compile] Warning: integer constant is too large for 'long' type
 
 When we write a function like `void add(int a, long long b) {...}`. And invoked in this way: `add(0x12,0x123450000)`. Gcc will throw a warning show above. The reason is `long long` can hold the numnber `0x123450000`, but in function invokation, the compiler cannot to recognize that. so we only need to add `LL` to the number.
 
@@ -21,7 +21,7 @@ When we write a function like `void add(int a, long long b) {...}`. And invoked 
 add(0x12, 0x123450000LL);
 ```
 
-## [compile] Warning: this decimal constant is unsigned only in ISO C90
+##### [compile] Warning: this decimal constant is unsigned only in ISO C90
 
 这个warning只会在低版本的gcc中出现，因为C90中不支持`long long`选项，所以`-2147483648`这个数超过了long的长度，此时如果是在这个常量后面加上LL标记，则该warning便会被去除。
 
@@ -31,14 +31,14 @@ add(0x12, 0x123450000LL);
 - a = 0x8000000;
 - a = -2147483647-1;
 
-## [compile] Error: enumeration value ‘xxx’ not handled in switch [-Werror=switch]
+##### [compile] Error: enumeration value ‘xxx’ not handled in switch [-Werror=switch]
 
 这个错误的原因是使用的enum值作为switch的检索，如果此时没有对所有的enum的项进行case遍历，则会出现这样的错误。
 
 注：使用枚举类型作switch的一个好处是，如果枚举值比较少，则不需要使用default项的。这个有利于检查。如果项比较多，则需要加上default项。这个错误的解决办法是：加上default项即可。
 
 
-## [skill]What does the __builtin_expect do in C
+##### [skill]What does the __builtin_expect do in C
 
 This is a GNU C builtin function. The function definition is :
 
