add new section for c

--- a/_posts/2016-08-16-C-faq.md
+++ b/_posts/2016-08-16-C-faq.md
@@ -38,7 +38,7 @@ add(0x12, 0x123450000LL);
 注：使用枚举类型作switch的一个好处是，如果枚举值比较少，则不需要使用default项的。这个有利于检查。如果项比较多，则需要加上default项。这个错误的解决办法是：加上default项即可。
 
 
-##### [skill]What does the __builtin_expect do in C
+##### [skills] What does the __builtin_expect do in C
 
 This is a GNU C builtin function. The function definition is :
 
@@ -65,3 +65,28 @@ There are two marcos in linux kernel code:
 ```
 
 Reference: [GCC Builtins Documentation](https://gcc.gnu.org/onlinedocs/gcc/Other-Builtins.html)
+
+
+##### [skills] How to get term size 
+
+This first way is use `ncurses` to get the size, but you need to install ncurses first. so this is not a primary way to take.
+
+Here is a another way to do that: `ioctl` , take a look
+
+```
+#include <stdio.h>
+#include <sys/ioctl.h>
+
+int main(void){
+	struct winsize ws;
+	ioctl(1, TIOCGWINSZ,&ws);
+
+	printf("line: %d\n",ws.ws_row);
+	printf("column: %d\n", ws.ws_col);
+
+	return 0;	
+}
+
+```
+
+so we can get the size of current term's dimensions
