update awk specify

--- a/_posts/2017-04-20-awk-lib.md
+++ b/_posts/2017-04-20-awk-lib.md
@@ -45,3 +45,43 @@ BEGIN{
 
 ```
 
+
+## Profiling
+
+first we need to insert some the count statement in the target file
+
+```awk
+#makeprof
+/{/  sub({, "{ _LBcnt[" ++_numLB "]++; ")
+print
+
+END {
+    printf("END {for (i=1; i<= %d; i++)\n}", _numLB)
+    printf("\t\t print _LBcnt[i] > \"prof.cnts\"\n}\n")    
+}
+```
+
+注意sub这个函数会对每行都执行，即使匹配不到也会对变量进行操作(_numLB总是会被自增)，所以可以先用正则匹配下。
+
+接下来是统计执行测试并将结果打印出来
+
+```awk
+#printprof
+BEGIN {while (getline < "prof.cnts" > 0) cnt[++i] = $1}
+
+/{/ {printf("%5d",cnt[++j])}
+    {printf("\t%s\n",$0)}
+
+```
+
+使用方式为：
+
+```bash
+awk -f makeprof target > target.p
+awk -f target.p inputfile
+awk -f printprof target
+```
+
+这样便可以看出执行的次数
+
+
